5.0.17

NEW
    - Added option to show healthvalues on raidframes
    - Added itemlevel to Hero window

FIXES
    - Improved performance of displaying raid auras (~10x) to prevent stuttering in large raids
    - Re-enabled updating raid frames when the party/raid changes during combat


5.0.16

NEW
    - Added option to show target average item level instead of prestige level
    - Added "Edit" button to equipment sets to change name and icon
    - Raid aura indicators now show stack count for auras with more than one stack
    - Added Paragon pending reward icon

FIXES
    - Fixed text of equipment set save and delete dialog
    - Fixed raid frame positioning problem happening since 8.1
    - Fixed reagent bank sizing
    - Fixed ready check for party frames
    
MISCELLANEOUS
    - Changed shaman raid indicator colors to match the spell icon colors


5.0.15

MISCELLANEOUS
    - Update TOC version to 8.1

5.0.14

FIXED
    - Fix an error with the custom UI in Arathi Basin BG (and Brawl version)
    - Jaina is now visible when using the immersive quest view in War Campaign quests


5.0.13

NEW
    - Add background imagery to reputation entries (BC, Classic, Others)

FIXED
    - Added middle mouse button to party and raidframes
    - Fix a bug that the raidframe target border stuck


5.0.12 - We would like to welcome Shrugal to the development team!

NEW
    - Option to sort raid frames by group instead of role
    - Additional options for raid layout and sizing
    - Option to preview raid frames for different group sizes
    - Support for hiding auras and showing missing buffs in raid frames
    - Configurable class buff indicators in raid frames
    - Add link to MyRolePlay in hero panel that temporarily uses default character frame (CF#264)

FIXED
    - Castbar gets stuck on screen (CF#263)
    - Fix some issues with the new Arena frames incl CF#261
    - Fix Lua error at fraction window


5.0.11

FIXED