@@ -7,6 +7,7 @@ NEW
 FIXES
     - Improved performance of displaying raid auras (~10x) to prevent stuttering in large raids
     - Re-enabled updating raid frames when the party/raid changes during combat
+    - Party frames should display names properly
 
 
 5.0.16
